test/corpus/general
=========================
grammar with metavars
=========================

metavar a {{ tex \alpha }}, b, c ::=
indexvar i, j ::=

grammar

type, t :: 'ty'_ ::=
  | a                   ::  :: var
  | </ ti // -> // i /> ::  :: arrow
---
(source_file
  (metavardefn
    (id_desc
      (id)
      (homomorphism
        name: (hom_name)
        body: (hom_body)))
    (id_desc
      (id))
    (id_desc
      (id)))
  (metavardefn
    (id_desc
      (id))
    (id_desc
      (id)))
  (grammar_rule
    (id_desc
      (id))
    (id_desc
      (id))
    (string)
    (production
      (element)
      (string))
    (production
      (element
        (element)
        (string)
        (comprehension_bound
          (id)))
        (string))))

===========================================
grammar with metavars and empty defns block
===========================================
metavar a {{ tex \alpha }}, b, c ::=
indexvar i, j ::=

grammar

type, t :: 'ty_' ::=
  | a                   ::  :: var
  | </ ti // -> // i /> ::  :: arrow

defns
typing :: 'ty_' ::=

---
(source_file
  (metavardefn
    (id_desc
      (id)
      (homomorphism
        name: (hom_name)
        body: (hom_body)))
    (id_desc
      (id))
    (id_desc
      (id)))
  (metavardefn
    (id_desc
      (id))
    (id_desc
      (id)))
  (grammar_rule
    (id_desc
      (id))
    (id_desc
      (id))
    (string)
    (production
      (element)
      (string))
    (production
      (element
        (element)
        (string)
        (comprehension_bound
          (id)))
        (string)))
  (defnclass
    class_name: (string)
    namespace_prefix: (string)))
