test/corpus/metavardefn
=========================
single variable metavar
=========================

metavar a ::=

---

(source_file
  (metavardefn
    (string_desc
      (string))))

=========================
single variable indexvar
=========================

indexvar i ::=

---

(source_file
  (metavardefn
    (string_desc
      (string))))

=========================
multiple variables
=========================
metavar a, b, c ::=

---

(source_file
  (metavardefn
    (string_desc
      (string))
    (string_desc
      (string))
    (string_desc
      (string))))

=========================
multiple variables with varying whitespace
=========================
metavar a , b,c,d ::=

---

(source_file
  (metavardefn
    (string_desc
      (string))
    (string_desc
      (string))
    (string_desc
      (string))
    (string_desc
      (string))))

============================
string as homomorphism body
============================
metavar a {{ tex \ell }}, b ::=

---

(source_file
  (metavardefn
    (string_desc
      (string)
      (homomorphism
        (hom_name)
        (hom_body)))
    (string_desc
      (string))))

============================
string as homomorphism body without inner whitespace
============================
metavar a {{tex \ell}}, b ::=

---

(source_file
  (metavardefn
    (string_desc
      (string)
      (homomorphism
        (hom_name)
        (hom_body)))
    (string_desc
      (string))))

============================
homInner as homomorphism body
============================
metavar a {{ tex [[gg]] }}, b ::=

---

(source_file
  (metavardefn
    (string_desc
      (string)
      (homomorphism
        (hom_name)
        (hom_body
          (hom_inner_block
            (string)))))
    (string_desc
      (string))))

============================
multiple homomorphisms
============================
metavar a {{ tex [[gg]] }}, b {{ tex \normalcolor }}::=
---

(source_file
  (metavardefn
    (string_desc
      (string)
      (homomorphism
        (hom_name)
        (hom_body
          (hom_inner_block
            (string)))))
    (string_desc
      (string)
      (homomorphism
        (hom_name)
        (hom_body)))))

============================
multiple identifiers in homInner
============================
metavar a {{ tex [[gg |- f]] }}, b ::=

---

(source_file
  (metavardefn
    (string_desc
      (string)
      (homomorphism
        (hom_name)
        (hom_body
          (hom_inner_block
            (string)
            (string)
            (string)))))
    (string_desc
      (string))))

=========================
invalid trailing comma
:error
=========================
metavar a, b, ::=

---

============================
string as homomorphism body with no closing brace
:error
============================
metavar a {{tex \ell

---

============================
hom_name stuck to contents
:error
============================
metavar a {{ tex[[gg]] }}

---

===============================
metavar keyword stuck to string
:error
===============================
metavarbeta ::=

---

